--- a/MyDay/app/src/main/res/layout/activity_list.xml
+++ b/MyDay/app/src/main/res/layout/activity_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".WorkActivity"
+    tools:context=".ShowList"
     android:padding="16dp">
 
     <LinearLayout
@@ -24,29 +24,28 @@
             android:scaleType="fitStart"
             android:src="@drawable/arrow" />
 
-        <TextView
-            android:id="@+id/diaryTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
-            android:text="일기작성"
-            android:layout_gravity="center_vertical"
-            android:textColor="#000"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-
-
-        <Button
-            android:id="@+id/save_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
+        <ImageButton
+            android:id="@+id/delete"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="200dp"
             android:textAlignment="center"
+            android:scaleType="fitCenter"
             android:background="@null"
-            android:text="등록"
             android:layout_gravity="center_vertical"
-            android:textSize="17dp" />
+            app:srcCompat="@drawable/delete"/>
+
+
+        <ImageButton
+            android:id="@+id/download"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="20dp"
+            android:textAlignment="center"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            android:layout_gravity="center_vertical"
+            app:srcCompat="@drawable/download"/>
 
 
     </LinearLayout>
@@ -61,8 +60,7 @@
         <ImageView
             android:layout_width="392dp"
             android:layout_height="10dp"
-            android:layerType="software"
-            android:src="@drawable/dot" />
+            android:layerType="software"/>
 
 
     </LinearLayout>
@@ -73,45 +71,53 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingRight="16dp"
-        android:paddingTop="12dp"
         android:paddingBottom="16dp">
 
         <!--  날짜 자동으로 가져와서 표시 해야 됨-->
-        <TextView
-            android:id="@+id/day"
-            android:text="05"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="5dp"
-            android:textColor="#000"
-            android:textSize="35dp"
-            android:textStyle="bold"
-            />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="223dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="10dp"
-            android:paddingLeft="8dp">
-
-            <TextView
-                android:id="@+id/month"
-                android:layout_width="wrap_content"
-                android:layout_height="15dp"
-                android:text="6월"
-                android:textColor="#000"
-                android:textSize="13dp"
-                android:textStyle="bold" />
+            android:paddingTop="10dp">
 
             <TextView
                 android:id="@+id/year"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2020"
+                android:layout_height="40dp"
+                android:paddingLeft="5dp"
+                android:text="2020년"
                 android:textColor="#000"
-                android:textSize="13dp"
+                android:textSize="30dp"
                 android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/month"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:paddingLeft="5dp"
+                    android:text="6월"
+                    android:textColor="#000"
+                    android:textSize="25dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/day"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:text="11일의 일기"
+                    android:textColor="#000"
+                    android:textSize="25dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
 
@@ -121,21 +127,10 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="135dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="28dp"
             android:gravity="center_vertical|right"
             android:text="날씨" />
-
-        <ImageButton
-            android:id="@+id/fileBtn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="13dp"
-            android:adjustViewBounds="true"
-            android:background="@null"
-            android:scaleType="fitCenter"
-            android:text="file"
-            app:srcCompat="@drawable/plus2" />
 
     </LinearLayout>
     <ScrollView
@@ -151,40 +146,56 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <VideoView
-                android:id="@+id/file_video"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:layout_gravity="center"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <ImageView
                 android:id="@+id/file_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
                 android:layout_gravity="center"
+                android:adjustViewBounds="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:color/background_light" />
 
-            <EditText
+            <TextView
                 android:id="@+id/work_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:background="@null"
                 android:ems="10"
                 android:gravity="start|top"
                 android:hint="텍스트를 입력하세요"
+                android:inputType="textMultiLine"
                 android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:inputType="textMultiLine" />
+                android:paddingRight="5dp" />
+
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+                <VideoView
+                    android:id="@+id/file_video"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ProgressBar
+                    android:id="@+id/progressbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone" />
+            </RelativeLayout>
+
         </LinearLayout>
     </ScrollView>
+
 </androidx.appcompat.widget.LinearLayoutCompat>
