--- a/MyDay/app/src/main/res/layout/select_emoticon.xml
+++ b/MyDay/app/src/main/res/layout/select_emoticon.xml
@@ -28,7 +28,7 @@
             android:text="오늘의 하루는 어떠셨나요?"
             android:textColor="#000000"
 
-            android:textSize="30sp"
+            android:textSize="28sp"
             android:textStyle="bold" />
 
         <TableLayout
@@ -44,36 +44,36 @@
                 android:layout_height="match_parent">
 
                 <ImageButton
-                    android:id="@+id/button_smile"
+                    android:id="@+id/button_angry"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="10dp"
                     android:background="#FFFFFF"
                     android:padding="0sp"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/smile"
+                    app:srcCompat="@drawable/cc"
                     android:onClick="onClick"/>
 
                 <ImageButton
-                    android:id="@+id/button_laughing"
+                    android:id="@+id/button_happy"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="10dp"
                     android:background="#FFFFFF"
                     android:padding="0sp"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/laughing"
+                    app:srcCompat="@drawable/bb"
                     android:onClick="onClick"/>
 
                 <ImageButton
-                    android:id="@+id/button_disappointment"
+                    android:id="@+id/button_tired"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="10dp"
                     android:background="#FFFFFF"
                     android:padding="0sp"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/disappointment"
+                    app:srcCompat="@drawable/ff"
                     android:onClick="onClick" />
             </TableRow>
 
@@ -82,36 +82,36 @@
                 android:layout_height="match_parent">
 
                 <ImageButton
-                    android:id="@+id/button_cold"
+                    android:id="@+id/button_sad"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="10dp"
                     android:background="#FFFFFF"
                     android:padding="0sp"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/cold"
+                    app:srcCompat="@drawable/aa"
                     android:onClick="onClick" />
 
                 <ImageButton
-                    android:id="@+id/button_crying"
+                    android:id="@+id/button_confused"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="10dp"
                     android:background="#FFFFFF"
                     android:padding="0sp"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/crying"
+                    app:srcCompat="@drawable/ee"
                     android:onClick="onClick" />
 
                 <ImageButton
-                    android:id="@+id/button_angry"
+                    android:id="@+id/button_scared"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_margin="10dp"
                     android:background="#FFFFFF"
                     android:padding="0sp"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/angry"
+                    app:srcCompat="@drawable/dd"
                     android:onClick="onClick" />
             </TableRow>
 
